--- a/BlazingBlog/Client/_Imports.razor
+++ b/BlazingBlog/Client/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using BlazingBlog.Client
 @using BlazingBlog.Client.Shared
+@using BlazingBlog.Client.Services
+@using BlazingBlog.Shared
+@using Markdig
