--- a/BlazingBlog/Client/Pages/Index.razor
+++ b/BlazingBlog/Client/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<h1>Welcom to Blazing Blog!</h1>
+<br />
+<h3>Latest blogs</h3>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<BlogPosts />
